<resources>
    <string name="app_name">Jumbled World</string>
    <string name="question_mark">\?</string>
    <string name="less_than">&lt;</string>
    <string name="description">background description</string>
    <string name="hint">want a hint ?</string>
    <string name="replay">replay</string>
    <string name="next">next</string>
    <string name="reset">reset</string>
    <string name="new_game">new game</string>
    <string name="conti">continue</string>
    <string name="all_cleared">All Cleared</string>
    <string name="easter_unlocked">Easter Egg Unlocked... Tap Here and there</string>
    <string name="you_have_failed_this_level">You Have Failed This Level</string>
    <string name="you_have_passed_this_level">You Have Passed This Level</string>
    <string name="congo">Congratulations</string>
    <string name="app_ID">ca-app-pub-3940256099942544~3347511713</string>
    <string name="ad_ID">ca-app-pub-3940256099942544/6300978111</string>
</resources>
