<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="87dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="120dp"
        app:cardBackgroundColor="#A5D6A7"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="35dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/congo"
                android:textColor="@color/colorBlack"
                android:textSize="25sp" />

            <com.airbnb.lottie.LottieAnimationView
                android:layout_gravity="center"
                android:id="@+id/animation_view"
                android:layout_width="140dp"
                android:layout_height="120dp"
                app:lottie_rawRes="@raw/winner"
                app:lottie_loop="true"
                app:lottie_autoPlay="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:text="@string/you_have_passed_this_level"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/replay1"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/description"
                    android:src="@drawable/replay" />

                <ImageView
                    android:id="@+id/next1"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/description"
                    android:src="@drawable/next" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/replay"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="-10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/next"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>