<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="87dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="120dp"
        app:cardBackgroundColor="#EF9A9A"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="35dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Ohh.. You Missed"
                android:textColor="@color/colorBlack"
                android:textSize="25sp" />

            <com.airbnb.lottie.LottieAnimationView
                android:layout_gravity="center"
                android:id="@+id/animation_view"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                app:lottie_rawRes="@raw/cross"
                app:lottie_loop="false"
                app:lottie_autoPlay="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:text="@string/you_have_failed_this_level"
                android:textSize="22sp" />

            <ImageView
                android:contentDescription="@string/description"
                android:id="@+id/replay"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:src="@drawable/replay" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/replay"
                android:textAllCaps="true"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>