<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/inner_bg"
    android:keepScreenOn="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/tv_bg_plain"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Level 3"
        tools:ignore="SpUsage" />

    <ImageView
        android:id="@+id/rocket"
        android:layout_width="138dp"
        android:layout_height="141dp"
        android:layout_marginTop="54dp"
        android:contentDescription="@string/description"
        android:src="@drawable/rocket"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/easter"
        android:textColor="@color/colorWhite"
        android:text="@string/easter_unlocked"
        android:textSize="15sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/rocket"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rocket">

        <TextView
            android:id="@+id/ans1"
            android:layout_width="180dp"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:background="@drawable/tv_bg_plain"
            android:gravity="center"
            android:text="@string/question_mark"
            android:textColor="@color/colorBlack"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ans2"
            android:layout_width="180dp"
            android:layout_height="70dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:background="@drawable/tv_bg_plain"
            android:gravity="center"
            android:text="@string/question_mark"
            android:textColor="@color/colorBlack"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ans3"
            android:layout_width="180dp"
            android:layout_height="70dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:background="@drawable/tv_bg_plain"
            android:gravity="center"
            android:text="@string/question_mark"
            android:textColor="@color/colorBlack"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ans4"
            android:layout_width="180dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:background="@drawable/tv_bg_plain"
            android:gravity="center"
            android:text="@string/question_mark"
            android:textColor="@color/colorBlack"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/hint"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:text="@string/hint"
            android:textColor="@color/colorBlack"
            android:textSize="22dp"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/hintLeft"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:layout_marginStart="2dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:background="@drawable/circle_green"
            android:textColor="@color/colorBlack"
            android:textSize="16dp"
            android:textStyle="bold"
            tools:text="2"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="15"
            android:gravity="end"
            android:maxLines="1"
            android:text="@string/reset"
            android:textColor="@color/colorBlack"
            android:textSize="22dp"
            tools:ignore="SpUsage" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/op1"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/tv_bg"
            android:gravity="center"
            android:text="C"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            tools:ignore="ButtonStyle,HardcodedText" />

        <Button
            android:id="@+id/op2"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/tv_bg"
            android:gravity="center"
            android:text="O"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            tools:ignore="ButtonStyle,HardcodedText" />

        <Button
            android:id="@+id/op3"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/tv_bg"
            android:gravity="center"
            android:text="E"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            tools:ignore="ButtonStyle,HardcodedText" />

        <Button
            android:id="@+id/op4"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/tv_bg"
            android:gravity="center"
            android:text="K"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            tools:ignore="ButtonStyle,HardcodedText" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/op5"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/tv_bg"
            android:gravity="center"
            android:text="A"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            tools:ignore="ButtonStyle,HardcodedText" />

        <Button
            android:id="@+id/op6"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/tv_bg"
            android:gravity="center"
            android:text="N"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/op7"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/tv_bg"
            android:gravity="center"
            android:text="X"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/op8"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/tv_bg"
            android:gravity="center"
            android:text="D"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            tools:ignore="ButtonStyle,HardcodedText" />

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-5073642246912223/5273510819"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>